documents/examples/bad/type_checking/function_type_b.latf
bool g(int x) {
    return x == 1;
}

int main() {
    [(int) -> int] f = lambda (int x) -> int . x;
    f = g; // error

    return 0;
}